reconfigure node setup for NCLR